--- a/src/lib/app.css
+++ b/src/lib/app.css
@@ -1,16 +1,52 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+@import "tailwindcss-addons";
 
-@layer base {
-    ::-webkit-scrollbar {
-        @apply h-0 w-0;
-    }
+@theme {
+    --color-zinc-*: initial;
+    --color-slate-*: initial;
+    --color-stone-*: initial;
+    --color-neutral-*: initial;
+
+    --color-gray-50: oklch(0.985 0 0); /* --color-neutral-50 */
+    --color-gray-100: oklch(0.97 0 0); /* --color-neutral-100 */
+    --color-gray-200: oklch(0.922 0 0); /* --color-neutral-200 */
+    --color-gray-300: oklch(0.87 0 0); /* --color-neutral-300 */
+    --color-gray-400: oklch(0.708 0 0); /* --color-neutral-400 */
+    --color-gray-500: oklch(0.556 0 0); /* --color-neutral-500 */
+    --color-gray-600: oklch(0.439 0 0); /* --color-neutral-600 */
+    --color-gray-700: oklch(0.371 0 0); /* --color-neutral-700 */
+    --color-gray-800: oklch(0.269 0 0); /* --color-neutral-800 */
+    --color-gray-900: oklch(0.205 0 0); /* --color-neutral-900 */
+    --color-gray-950: oklch(0.145 0 0); /* --color-neutral-950 */
+
+    --color-background: oklch(0.205 0 0); /* --color-neutral-900 */
+    --color-foreground: oklch(0.97 0 0); /* --color-neutral-100 */
+
+    --radius-lg: initial;
+    --radius: 0.5rem; /* --radius-lg */
+
+    --font-sans: "Recursive Variable";
+    --font-mono: "Recursive Variable";
+    --font-mono--font-feature-settings: "'MONO' 1";
+
+    --font-weight-thin: initial;
+    --font-weight-extralight: initial;
+    --font-weight-extrablack: 1000;
+}
+
+@utility container {
+    @apply mx-auto max-w-screen-md px-4;
 }
 
 @layer base {
     * {
-        @apply select-none outline-none drag-none;
+        @apply drag-none [outline:transparent];
+    }
+}
+
+@layer base {
+    ::-webkit-scrollbar {
+        @apply h-0 w-0;
     }
 }
 
@@ -30,27 +66,5 @@
     /* NOTE: data attributes are used for Zag's state machine */
     [data-part="item"][data-focus-visible] {
         @apply ring-2 ring-teal-400;
-    }
-}
-
-@layer utilities {
-    .container {
-        @apply max-w-screen-md;
-    }
-}
-
-@layer utilities {
-    .bordered {
-        @apply border-2 border-gray-800;
-    }
-    /* NOTE: data attributes are used for Zag's state machine */
-    .clickable {
-        @apply bordered data-[hover]:border-gray-700 not-[:disabled]:hover:border-gray-700;
-    }
-    .clickable-with-icon {
-        @apply clickable data-[hover]:text-gray-100 not-[:disabled]:hover:text-gray-100;
-    }
-    .writable {
-        @apply clickable data-[focus-visible]:border-gray-700 not-[:disabled]:focus-visible:border-gray-700;
     }
 }
