--- a/src/lib/app.css
+++ b/src/lib/app.css
@@ -43,3 +43,35 @@
         @apply h-0 w-0;
     }
 }
+
+/* --- */
+
+@keyframes slideDown {
+    from {
+        height: 0;
+    }
+    to {
+        height: var(--height);
+    }
+}
+
+@keyframes slideUp {
+    from {
+        height: var(--height);
+    }
+    to {
+        height: 0;
+    }
+}
+
+[data-scope="collapsible"][data-part="content"] {
+    @apply overflow-hidden;
+}
+
+[data-scope="collapsible"][data-part="content"][data-state="open"] {
+    animation: slideDown 300ms ease-in-out;
+}
+
+[data-scope="collapsible"][data-part="content"][data-state="closed"] {
+    animation: slideUp 200ms ease-in-out;
+}
